@@ -1,5 +1,11 @@
 2018-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	Submitted by Dennis Reimers:
+	patch #8580: FT245r support to select device by serial number
+	* ft245r.c (ft245r_open): Add serial number parsing.
+
+2018-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	Submitted by Axel Simon:
 	patch #9033: avrdoper backend uses libhidapi instead of libusb
 	* ser_avrdoper: Add libhidapi implementation
